--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.8.1
 certifi==2022.6.15
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 Flask==2.0.3
@@ -7,6 +8,7 @@ Flask-Cors==3.0.10
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
+idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.2
@@ -16,6 +18,8 @@ Pillow==9.2.0
 PyJWT==2.4.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+razorpay==1.3.0
+requests==2.28.1
 sib-api-v3-sdk==7.5.0
 six==1.16.0
 SQLAlchemy==1.4.41
